# Aletheia

./: .env.example  .env.production.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.prod.yml  pr5-review-notes.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: fact_checker.py  text_detector.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  auth.py  billing.py  chat.py  conversations.py  router.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_add_hashed_password.py  0002_add_text_detection_enum.py  0003_add_text_detection_enum.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: analysis.py  conversation.py  user.py
backend/app/services/: analysis.py  openai_service.py  source_credibility.py  url_extractor.py
backend/app/utils/: url_detect.py
backend/tests/: conftest.py  test_security.py
backend/tests/test_agents/: test_fact_checker.py  test_text_detector.py
backend/tests/test_api/: test_conversations.py  test_endpoints.py
backend/tests/test_services/: test_source_credibility.py  test_url_extractor.py
frontend/: .dockerignore  .env.production.example  .gitignore  Dockerfile  auth.ts  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnalysisCard.tsx  ChatInterface.tsx  PricingModal.tsx  Sidebar.tsx  (+1 more)
(+7 files in other folders)
